--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
+    "coinpayments": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -20,6 +22,8 @@
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "paystack": "^2.0.1",
+    "paystack-api": "^2.0.6",
     "stripe": "^17.3.1",
     "validator": "^13.12.0"
   }
